# django-template

./: LICENSE  README.md  cookiecutter.json  flake.nix
hooks/: post_gen_project.py
nix_templates/nixos/: flake.nix
{{cookiecutter.project_slug}}/: .envrc  .gitignore  README.md  default.nix  default_nix.nix  default_poetry.nix  flake.nix  justfile  nixos.nix  overrides.nix  pyproject.toml  requirements.nix  requirements_dev.nix  shell.nix  static.nix
{{cookiecutter.project_slug}}/backend/: Makefile  default.nix  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/backend/scripts/: check_migrations.sh  run_tests.sh
{{cookiecutter.project_slug}}/backend/{{cookiecutter.project_slug}}/config/: wsgi.py
{{cookiecutter.project_slug}}/backend/{{cookiecutter.project_slug}}/config/settings/: base.py  dev.py
{{cookiecutter.project_slug}}/frontend/: default.nix  package.json  tailwind.config.js
{{cookiecutter.project_slug}}/src/assets/: default.nix  package.json  tailwind.config.js  vite.config.js
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/accounts/migrations/: 0001_initial.py  0002_auto_20180516_1020.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/config/: __init__.py  asgi.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/config/settings/: base.py  dev.py  test.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/templates/: base.html
